using googlemaps api for address search

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,13 @@
 # Backend Environment Variables
 
+# Backend API URL
+VITE_API_URL=http://localhost:3001
+
+# Google Maps API Key (for address autocomplete)
+# Get your key at: https://console.cloud.google.com/
+# Enable: Places API and Geocoding API
+VITE_GOOGLE_MAPS_API_KEY=your_google_maps_api_key_here
+
 # Email Configuration (for order notifications)
 EMAIL_USER=your-email@gmail.com
 EMAIL_PASS=your-app-password-here
