--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dev:all": "concurrently \"npm run server\" \"npm run dev\""
   },
   "dependencies": {
+    "@googlemaps/js-api-loader": "^2.0.2",
     "clsx": "^2.1.1",
     "concurrently": "^9.2.1",
     "cors": "^2.8.5",
