--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.9.6",
+    "sharp": "^0.34.5",
     "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
